feat: add start drug resources, rename aid kit resources
