# apps/api/src/aid-kit/controllers/aid-kit.controller.ts
@@ -6,18 +6,18 @@ import { ResponseInfo } from '@modules/core/api-responses';
 import { USER_ROLE } from '@modules/users/constants';
 import { Roles } from '@modules/users/decorators';
 
-import { FirstAidKidService } from '../services';
+import { AidKitService } from '../services';
 
-@Controller('first-aid-kid')
-@ApiTags('first-aid-kid')
-export class FirstAidKidsController {
-  constructor(private readonly firstAidKidService: FirstAidKidService) {}
+@Controller('aid-kit')
+@ApiTags('aid-kit')
+export class AidKitController {
+  constructor(private readonly aidKitService: AidKitService) {}
 
   @Roles(USER_ROLE.ADMIN, USER_ROLE.USER)
   @Get()
   @ResponseInfo()
   // eslint-disable-next-line no-unused-vars, @typescript-eslint/no-unused-vars
-  public async getMyFirstAidKids(@UserId() userId: number): Promise<void> {
-    // await this.firstAidKidService.getMyFirstAidKids(userId);
+  public async getMyAidKits(@UserId() userId: number): Promise<void> {
+    // await this.aidKitService.getMyAidKits(userId);
   }
 }
